# sgemm_silicon

./: .gitignore  CMakeLists.txt  README.md  test.c
src/: accelerate_simd.h  base_simd.h  eigen_extension.cpp  eigen_extension.h  kernel.c  kernel.h  math_simd.h  matmul.c  matmul.h  mlx_extension.cpp  mlx_extension.h  utils.c  utils.h
test/: TestCache.cpp
